--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docker-service",
-  "version": "1.0.0",
+  "name": "mani-docker-service",
+  "version": "1.1.0",
   "description": "A CLI used to get list of docker images in the private repository",
   "main": "src/index.js",
   "scripts": {
@@ -19,5 +19,8 @@
   "dependencies": {
     "node-fetch": "^3.3.1",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.3"
   }
 }
